<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context="com.powerge.wise.powerge.mainPage.MainActivity">
        <!--严格布局，否则会显示不全 宽高为0 会填充剩余-->
        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/navigation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <cn.bingoogolapple.badgeview.BGABadgeRadioButton
                android:id="@+id/tab1"
                style="@style/MainTab"
                android:checked="true"
                android:drawableTop="@drawable/selector_ic_tab1"
                android:text="@string/title_home" />

            <cn.bingoogolapple.badgeview.BGABadgeRadioButton
                android:id="@+id/tab2"
                style="@style/MainTab"
                android:drawableTop="@drawable/selector_ic_tab2"
                android:text="@string/title_announce" />


            <cn.bingoogolapple.badgeview.BGABadgeRadioButton
                android:id="@+id/tab3"
                style="@style/MainTab"
                android:drawableTop="@drawable/selector_ic_tab3"
                android:text="@string/title_notifications" />

            <cn.bingoogolapple.badgeview.BGABadgeRadioButton
                android:id="@+id/tab4"
                style="@style/MainTab"
                android:drawableTop="@drawable/selector_ic_tab4"
                android:text="@string/title_mine" />

        </RadioGroup>


    </android.support.constraint.ConstraintLayout>
</layout>