<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.wise.www.tyjcapp.main.ortherPage.ServerAddressActivity">

        <FrameLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/btn_back"
                style="@style/BackButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:onClick="onClick"
                android:padding="15dp" />

            <TextView
                android:id="@+id/title"
                style="@style/Title"
                android:text="@string/str_system_case" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape_login_et"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/et_server_url"
                android:text="http://"
                android:textColorHint="@color/c3"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_server_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/server"
                android:maxLines="1"
                android:textColor="@color/c3"
                android:textColorHint="@color/c3"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_server_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/shape_login_bt"
            android:onClick="onClick"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</layout>